# relational-contrast-sim

./: .gitignore  ALTERNATIVE_GRAPH_QUICK_TEST.md  CANONICAL_IMPLEMENTATION_PLAN.md  CLAUDE.md  COMPLETE_GRAPH_SPECTRAL_ANALYSIS.md  COMPLETE_VS_SPARSE_VALIDATION_REPORT.md  COMPREHENSIVE_VALIDATION_REPORT.md  CRISIS_SUMMARY.md  CRITICAL_GAPS_ANALYSIS.md  CURRENT_UNDERSTANDING.md  Cargo.toml  ENTROPY_CONVENTION_ANALYSIS.md  ERROR_ANALYSIS_IMPLEMENTATION.md  FINAL_PHYSICS_VERDICT.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_COMPARISON.md  IMPLEMENTATION_ROADMAP.md  LICENSE  OBSERVABLES_IMPLEMENTATION.md  OPTIMIZATION_SUMMARY.md  PAPER_PHYSICS_EXTRACTED.md  PAPER_PHYSICS_SUMMARY.md  PAPER_VS_CODE_DETAILED.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PHYSICS_BUG_REPORT.md  PHYSICS_RESOLUTION_SUMMARY.md  PHYSICS_SPECIFICATION.md  PHYSICS_VALIDATION_REPORT.md  PHYSICS_VERIFICATION_REPORT.md  PROJECT_STRUCTURE.md  README.md  RIGOROUS_FOUNDATIONS.md  SPECTRAL_ANALYSIS_CONCLUSIONS.md  analysis.ipynb  autocorrelation_analysis.py  check_data_quality.py  check_test_results.py  combined_scan.pkl  create_figure4.py  critical_exponents.txt  (+25 more)
.ipynb_checkpoints/: phase_scan-checkpoint.ipynb
analysis/: README.md  file_inventory.txt
analysis/results/: enhanced_fss_results_20250620_212318.json  fss_results_20250620_212135.json  ridge_structure_analysis.txt
analysis/scripts/: run_n96_ridge_scan.sh
analysis/scripts/fss/: analyze_complete_fss.py  debug_fss_analysis.py  fix_fss_analysis.py
analysis/scripts/visualization/: create_paper_figures.py  publication_figures.py
archive/2024_debugging/: PHASE_SPACE_REPORT.md  comprehensive_implementation_fix.rs  fix_implementation_consistency.rs  fix_ultra_optimized_initial_state.rs  test_ultra_optimized_fix.rs  validate_implementation_fix.rs
archive/2024_debugging/guides/: GPU_BATCHING_CHANGES.md  PROFILING_RESULTS.md
archive/old_scripts/: analyze_n96_ridge.py  analyze_n96_verification.py  analyze_results.py  benchmark_optimizations.py  complete_fss_analysis_corrected.py  create_figure1_ridge_emphasis.py  create_ridge_alignment_figure.py  enhanced_fss_analysis.py  generate_n96_critical.py  monitor_ridge_progress.py  run_importance_sampling.py  run_n96_critical.sh  run_optimization_benchmark.py  run_ridge_universality_test.sh  visualize_profiling.py
benchmarks/: test_benchmark.sh  test_gpu_batched.rs
docs/: CLEANUP_SUMMARY.md  CRITICAL_BUGS.md  ORGANIZATION_SUMMARY.md  PROJECT_SUMMARY.md  PUBLICATION_SUMMARY.md  UNCONVENTIONAL_PHYSICS_REPORT.md  critical_exponents.txt  diagnostic_report.txt  fss_final_results.txt  m1_optimization_guide.md  metal_gpu_guide.md  optimization_results.md  susceptibility_fix_summary.md  validation_summary.md
docs/guides/: BENCHMARK_RESULTS.md  CACHE_OPTIMIZATION_GUIDE.md  CACHE_OPTIMIZATION_SUMMARY.md  IMPORTANCE_SAMPLING_GUIDE.md  OPTIMIZATION_GUIDE.md  TRIANGLE_OPTIMIZATION.md  optimize_triangle_sum.md
docs/patches/: incremental_triangle_update.patch  triangle_optimization.patch
docs/results/: final_fss_results.txt
docs/scripts/: reorganize_project.sh  tidy_loose_files.sh
examples/: m1_example.rs  metal_gpu_example.rs
scripts/: analyze_existing_n96_ridge.py  analyze_ridge_universality.py  binder_cumulant_analysis.py  complete_fss_analysis.py  create_critical_ridge_figure.py  create_updated_figure1.py  critical_ridge_finder.py  generate_n96_ridge_scan.py  generate_publication_figures.py  plot_entropy_diagnostic.py  quick_verify_n96.py  test_ridge_universality.py  verify_n96_peak.py  visualize_fss.py
src/: benchmark_cache_optimization.rs  error_analysis.rs  fast_mc_integration.rs  finite_size.rs  graph.rs  graph_cache_optimized.rs  graph_fast.rs  graph_m1_accelerate.rs  graph_m1_optimized.rs  graph_metal.rs  graph_optimized.rs  graph_optimized_integration.rs  graph_ultra_optimized.rs  importance_mc_integration.rs  importance_sampling.rs  lib.rs  main.rs  measure.rs  minimal_correct_physics.rs  observables.rs  projector.rs  rng.rs
src/shaders/: monte_carlo.metal
tests/: dougal_invariance_test.rs  dougal_test.rs  entropy_test.rs  error_analysis_test.rs  graph_projection_test.rs  graph_test.rs  metropolis_test.rs  observables_test.rs  phase_antisymmetry_test.rs  projector_test.rs  spectral_test.rs  triangle_test.rs  ultra_optimized_physics_test.rs
