[package]
name = "scan"
version = "0.2.0"
edition = "2021"

[dependencies]
rand         = { version = "0.8", features = ["small_rng", "std"] }
rand_chacha  = { version = "0.3" }
rand_pcg     = { version = "0.3" }
rand_distr   = { version = "0.4" }
rayon        = { version = "1.10" }
csv          = { version = "1.3" }
indicatif    = { version = "0.17" }
nalgebra     = { version = "0.32" }
clap = { version = "4.5.39", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"
objc = "0.2"
cocoa-foundation = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.release.build-override]
opt-level = 0

[[bin]]
name = "wide_scan"
path = "src/bin/wide_scan.rs"

[[bin]]
name = "fss_analysis"
path = "src/bin/fss_analysis.rs"

[[bin]]
name = "multi_size_scan"
path = "src/bin/multi_size_scan.rs"

[[bin]]
name = "generate_pairs"
path = "src/bin/generate_pairs.rs"

[[bin]]
name = "fss_narrow_scan"
path = "src/bin/fss_narrow_scan.rs"

[[bin]]
name = "benchmark_metal"
path = "src/bin/benchmark_metal.rs"

[[bin]]
name = "quick_validation"
path = "src/bin/quick_validation.rs"

[[bin]]
name = "debug_chi"
path = "src/bin/debug_chi.rs"

[[bin]]
name = "critical_finder"
path = "src/bin/critical_finder.rs"

[[bin]]
name = "critical_finder_long"
path = "src/bin/critical_finder_long.rs"

[[bin]]
name = "test_susceptibility"
path = "src/bin/test_susceptibility.rs"