[package]
name = "scan"
version = "0.2.0"
edition = "2021"

[dependencies]
rand         = { version = "0.8", features = ["small_rng", "std"] }
rand_chacha  = { version = "0.3" }
rand_pcg     = { version = "0.3" }
rand_distr   = { version = "0.4" }
rayon        = { version = "1.10" }
csv          = { version = "1.3" }
indicatif    = { version = "0.17" }
nalgebra     = { version = "0.32" }
clap = { version = "4.5.39", features = ["derive"] }
num-complex  = { version = "0.4" }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"
objc = "0.2"
cocoa-foundation = "0.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.release.build-override]
opt-level = 0

[[bin]]
name = "wide_scan"
path = "src/bin/wide_scan.rs"

[[bin]]
name = "fss_analysis"
path = "src/bin/fss_analysis.rs"

[[bin]]
name = "multi_size_scan"
path = "src/bin/multi_size_scan.rs"

[[bin]]
name = "generate_pairs"
path = "src/bin/generate_pairs.rs"

[[bin]]
name = "fss_narrow_scan"
path = "src/bin/fss_narrow_scan.rs"

[[bin]]
name = "benchmark_metal"
path = "src/bin/benchmark_metal.rs"

[[bin]]
name = "quick_validation"
path = "src/bin/validation/quick_validation.rs"

[[bin]]
name = "debug_chi"
path = "src/bin/debug/debug_chi.rs"

[[bin]]
name = "critical_finder"
path = "src/bin/critical_finder.rs"

[[bin]]
name = "critical_finder_long"
path = "src/bin/critical_finder_long.rs"

[[bin]]
name = "test_susceptibility"
path = "src/bin/debug/test_susceptibility.rs"

[[bin]]
name = "debug_mc_physics"
path = "src/bin/debug/debug_mc_physics.rs"

[[bin]]
name = "forensic_energy_audit"
path = "src/bin/debug/forensic_energy_audit.rs"

[[bin]]
name = "debug_zero_moves"
path = "src/bin/debug/debug_zero_moves.rs"

[[bin]]
name = "debug_no_op_detailed"
path = "src/bin/debug/debug_no_op_detailed.rs"

[[bin]]
name = "trace_noop_rejection"
path = "src/bin/debug/trace_noop_rejection.rs"

[[bin]]
name = "simple_metropolis_test"
path = "src/bin/debug/simple_metropolis_test.rs"

[[bin]]
name = "precision_tracer"
path = "src/bin/debug/precision_tracer.rs"

[[bin]]
name = "debug_metropolis_internal"
path = "src/bin/debug/debug_metropolis_internal.rs"

[[bin]]
name = "ultra_precision_tracer"
path = "src/bin/debug/ultra_precision_tracer.rs"

[[bin]]
name = "direct_debug_trace"
path = "src/bin/debug/direct_debug_trace.rs"

[[bin]]
name = "simple_debug_test"
path = "src/bin/debug/simple_debug_test.rs"

[[bin]]
name = "focused_debug"
path = "src/bin/debug/focused_debug.rs"

[[bin]]
name = "precision_analysis"
path = "src/bin/debug/precision_analysis.rs"

[[bin]]
name = "improved_triangle_delta"
path = "src/bin/debug/improved_triangle_delta.rs"

[[bin]]
name = "unconventional_physics"
path = "src/bin/physics_analysis/unconventional_physics.rs"

[[bin]]
name = "quick_unconventional"
path = "src/bin/physics_analysis/quick_unconventional.rs"

[[bin]]
name = "low_temp_degeneracy"
path = "src/bin/physics_analysis/low_temp_degeneracy.rs"

[[bin]]
name = "publication_analysis"
path = "src/bin/physics_analysis/publication_analysis.rs"

[[bin]]
name = "quick_publication_demo"
path = "src/bin/quick_publication_demo.rs"

[[bin]]
name = "demo_spectral"
path = "src/bin/demo_spectral.rs"

[[bin]]
name = "demo_antisymmetry"
path = "src/bin/demo_antisymmetry.rs"